# vercel-rpc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  package.json  playwright.config.ts  release-plz.toml  vercel.json  vite.config.ts
crates/metaxy/: CHANGELOG.md  Cargo.toml  README.md
crates/metaxy-cli/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/metaxy-cli/src/: config.rs  lib.rs  main.rs  model.rs  parser.rs  watch.rs
crates/metaxy-cli/src/codegen/: client.rs  common.rs  react.rs  solid.rs  svelte.rs  typescript.rs  vue.rs
crates/metaxy-cli/src/parser/: extract.rs
crates/metaxy-cli/tests/: client.rs  commands.rs  common.rs  config.rs  extract.rs  overrides.rs  react.rs  solid.rs  svelte.rs  types.rs  typescript.rs  vue.rs
crates/metaxy-cli/tests/common/: mod.rs
crates/metaxy-cli/tests/snapshots/: client__snapshot_client_imports_structs.snap  client__snapshot_client_with_call_options.snap  client__snapshot_client_with_dedup.snap  client__snapshot_client_with_jsdoc.snap  client__snapshot_client_with_methods.snap  client__snapshot_full_client.snap  react__snapshot_react_full.snap  react__snapshot_react_mutations_only.snap  react__snapshot_react_queries_only.snap  react__snapshot_react_streams_only.snap  solid__snapshot_solid_full.snap  solid__snapshot_solid_mutations_only.snap  solid__snapshot_solid_queries_only.snap  solid__snapshot_solid_streams_only.snap  svelte__snapshot_svelte_full.snap  svelte__snapshot_svelte_mutations_only.snap  svelte__snapshot_svelte_queries_only.snap  svelte__snapshot_svelte_streams_only.snap  typescript__snapshot_adjacent_tagged.snap  typescript__snapshot_bigint_types.snap  typescript__snapshot_branded_newtypes.snap  typescript__snapshot_complete_types.snap  typescript__snapshot_empty_manifest.snap  typescript__snapshot_enum_mixed.snap  typescript__snapshot_enum_unit.snap  typescript__snapshot_flatten.snap  typescript__snapshot_generic_struct.snap  typescript__snapshot_internal_tagged.snap  typescript__snapshot_serde_rename_all.snap  typescript__snapshot_serde_skip_and_default.snap  typescript__snapshot_type_overrides.snap  typescript__snapshot_types_camel_case.snap  typescript__snapshot_types_with_jsdoc.snap  typescript__snapshot_untagged.snap  vue__snapshot_vue_full.snap  vue__snapshot_vue_mutations_only.snap  vue__snapshot_vue_queries_only.snap  vue__snapshot_vue_streams_only.snap
crates/metaxy/src/: lib.rs  stream.rs
crates/rpc/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc-cli/src/: codegen.rs  commands.rs  config.rs  lib.rs  main.rs  model.rs  parser.rs  watch.rs
crates/rpc-cli/src/codegen/: client.rs  common.rs  mod.rs  overrides.rs  react.rs  solid.rs  svelte.rs  typescript.rs  vue.rs
crates/rpc-cli/src/parser/: extract.rs  mod.rs  serde.rs  types.rs
crates/rpc-cli/tests/: client.rs  commands.rs  config.rs  extract.rs  overrides.rs  react.rs  solid.rs  svelte.rs  types.rs  typescript.rs  vue.rs
crates/rpc-cli/tests/common/: mod.rs
crates/rpc-cli/tests/snapshots/: client__snapshot_client_imports_structs.snap  client__snapshot_client_with_call_options.snap  client__snapshot_client_with_dedup.snap  client__snapshot_client_with_jsdoc.snap  client__snapshot_client_with_methods.snap  client__snapshot_full_client.snap  react__snapshot_react_full.snap  react__snapshot_react_mutations_only.snap  react__snapshot_react_queries_only.snap  solid__snapshot_solid_full.snap  solid__snapshot_solid_mutations_only.snap  solid__snapshot_solid_queries_only.snap  svelte__snapshot_svelte_full.snap  svelte__snapshot_svelte_mutations_only.snap  svelte__snapshot_svelte_queries_only.snap  typescript__snapshot_adjacent_tagged.snap  typescript__snapshot_bigint_types.snap  typescript__snapshot_branded_newtypes.snap  typescript__snapshot_complete_types.snap  typescript__snapshot_empty_manifest.snap  typescript__snapshot_enum_mixed.snap  typescript__snapshot_enum_unit.snap  typescript__snapshot_flatten.snap  typescript__snapshot_generic_struct.snap  typescript__snapshot_internal_tagged.snap  typescript__snapshot_serde_rename_all.snap  typescript__snapshot_serde_skip_and_default.snap  typescript__snapshot_type_overrides.snap  typescript__snapshot_types_camel_case.snap  typescript__snapshot_types_with_jsdoc.snap  typescript__snapshot_untagged.snap  vue__snapshot_vue_full.snap  vue__snapshot_vue_mutations_only.snap  vue__snapshot_vue_queries_only.snap
crates/rpc-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc-macro/src/: lib.rs  tests.rs
crates/rpc/src/: lib.rs
demo/: .gitignore  .prettierignore  Cargo.toml  eslint.config.js  metaxy.config.toml  package-lock.json  package.json  playwright.config.ts  rpc.config.toml  vite.config.ts  vitest.config.ts
demo/api/: bigint_demo.rs  cached_time.rs  cached_time_private.rs  cached_time_stale.rs  cookie_demo.rs  countdown.rs  dedup_demo.rs  echo.rs  hello.rs  idempotent_demo.rs  init_demo.rs  math.rs  profile.rs  retry_demo.rs  secret.rs  stats.rs  status.rs  time.rs  timeout_demo.rs  token_stream.rs  types.rs
demo/src/: app.css  app.html  lib.rs
demo/src/lib/: client.ts  highlight.server.ts  rpc-client.ts  rpc-types.ts  rpc.svelte.ts
demo/src/lib/components/: Button.svelte  Code.svelte  CodeBlock.svelte  CollapsibleCode.svelte  DemoCard.svelte  FeatureRow.svelte  OutputBox.svelte  PageHeader.svelte  SectionHeading.svelte
demo/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Header.svelte
demo/src/routes/about/: +page.svelte
demo/src/routes/docs/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
demo/src/routes/docs/cli/commands/: +page.server.ts  +page.svelte
demo/src/routes/docs/cli/generate/: +page.server.ts  (+1 more)
demo/src/routes/docs/config-file/: +page.server.ts  +page.svelte
demo/src/routes/docs/error-handling/: +page.server.ts  +page.svelte
demo/src/routes/docs/getting-started/: +page.server.ts  +page.svelte
demo/src/routes/examples/: +page.svelte
demo/src/routes/rpc/: +page.svelte
demo/tests/e2e/: rpc.test.ts
demo/tests/integration/: codegen.test.ts
(+240 files in other folders)
