[package]
name = "svelte-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rspc = "0.1.4"
specta = { version = "1.0", features = ["typescript"] }
url = "2.5"

[[bin]]
name = "hello"
path = "api/hello.rs"

[[bin]]
name = "time"
path = "api/time.rs"

[[bin]]
name = "rspc"
path = "api/rspc.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
