[workspace]
members = ["crates/metaxy", "crates/metaxy-macro", "crates/metaxy-cli", "demo"]
resolver = "3"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
redundant_clone = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
needless_pass_by_value = { level = "warn", priority = 1 }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
