[package]
name = "vercel-rpc-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
http-body-util = "0.1"
vercel-rpc-macro = { path = "../crates/rpc-macro" }

[[bin]]
name = "hello"
path = "api/hello.rs"

[[bin]]
name = "time"
path = "api/time.rs"

[[bin]]
name = "echo"
path = "api/echo.rs"

[[bin]]
name = "math"
path = "api/math.rs"

[[bin]]
name = "stats"
path = "api/stats.rs"

[[bin]]
name = "status"
path = "api/status.rs"
