[package]
name = "vercel-rpc-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vercel-rpc = { path = "../crates/rpc" }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "hello"
path = "api/hello.rs"

[[bin]]
name = "time"
path = "api/time.rs"

[[bin]]
name = "echo"
path = "api/echo.rs"

[[bin]]
name = "math"
path = "api/math.rs"

[[bin]]
name = "stats"
path = "api/stats.rs"

[[bin]]
name = "status"
path = "api/status.rs"

[[bin]]
name = "profile"
path = "api/profile.rs"

[[bin]]
name = "types"
path = "api/types.rs"
