[package]
name = "metaxy"
version = "0.1.4"
edition = "2024"
description = "End-to-end typesafe RPC between Rust and TypeScript"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misha-mad/metaxy"
homepage = "https://github.com/misha-mad/metaxy"
keywords = ["rpc", "metaxy", "serverless", "typescript", "codegen"]
categories = ["web-programming"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
metaxy-macro = { path = "../metaxy-macro", version = "0.1" }
vercel_runtime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
url = "2"
http-body-util = "0.1"
http = "1"
