[package]
name = "vercel-rpc-cli"
version = "0.1.3"
edition = "2024"
description = "CLI tool for Vercel RPC: parses Rust lambdas and generates TypeScript types and client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misha-mad/vercel-rpc"
homepage = "https://github.com/misha-mad/vercel-rpc"
keywords = ["rpc", "vercel", "cli", "serverless", "typescript"]
categories = ["web-programming", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "rpc"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
notify = "7"
notify-debouncer-mini = "0.5"
colored = "2"
ctrlc = "3"
toml = "0.8"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
