[package]
name = "vercel-rpc-macro"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for Vercel RPC framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misha-mad/vercel-rpc"
homepage = "https://github.com/misha-mad/vercel-rpc"
keywords = ["rpc", "vercel", "macro", "serverless", "svelte"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
