[package]
name = "vercel-rpc"
version = "0.1.2"
edition = "2024"
description = "End-to-end typesafe RPC between Rust lambdas on Vercel and any TypeScript frontend"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misha-mad/vercel-rpc"
homepage = "https://github.com/misha-mad/vercel-rpc"
keywords = ["rpc", "vercel", "serverless", "typescript", "lambda"]
categories = ["web-programming"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
vercel-rpc-macro = { path = "../rpc-macro", version = "0.1" }
vercel_runtime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
url = "2"
http-body-util = "0.1"
http = "1"
